modal backdrop ajustado

--- a/public/css/ambiente.css
+++ b/public/css/ambiente.css
@@ -104,3 +104,6 @@
 .form-control {
     font-size: 1rem;
 }
+.modal-backdrop {
+    background-color: rgba(0, 0, 0, 0.5); /* Color del fondo oscuro */
+}
