--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -125,12 +125,15 @@
   }
   .active::before {
     content: '';
-    position: absolute;
     left: 0;
-    width: 2px;
-    height: 32px;
-    background-color: var(--white-color);
-  }
+    top: 50%;
+    transform: translateY(-50%);
+    width: 3px;
+    height: 80%;
+    background-color: white;
+    position: absolute;
+}
+
   .height-100 {
     height: 100vh;
   }
