--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -2,7 +2,7 @@
  /* Añade estilos personalizados aquí si es necesario */
  :root {
     --header-height: 3rem;
-    --nav-width: 68px;
+    --nav-width: 60px;
     --first-color: #2B4C6F;
     --first-color-light: #AFA5D9;
     --white-color: #F7F6FB;
@@ -22,6 +22,7 @@
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     transition: .5s;
+    margin-left: 10rem !important;
   }
   a {
     text-decoration: none;
@@ -36,7 +37,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 1rem;
-    background-color: var(--white-color);
+    
     z-index: var(--z-fixed);
     transition: .5s;
   }
@@ -85,6 +86,17 @@
   .nav_list {
     margin-top: 50px; /* Ajusta el valor según tus necesidades */
   }
+
+  .nav_list a:hover {
+    color: white;
+    box-shadow: 0 0 0 #ffffff, 
+    0 0 9px #467cb6, 
+    0 0 11px #ffffff, 
+    0 0 13px #ffffff,
+    0 0 15px #ffffff;
+    background-color: #467cb6;
+  }
+
   .nav_logo,
   .nav_link {
     display: grid;
@@ -123,16 +135,7 @@
   .active {
     color: var(--white-color);
   }
-  .active::before {
-    content: '';
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 3px;
-    height: 80%;
-    background-color: white;
-    position: absolute;
-}
+
 
   .height-100 {
     height: 100vh;
@@ -153,6 +156,13 @@
     .l-navbar {
       left: 0;
       --nav-width: 68px;
+    }
+    body {
+      margin-left: 2.5rem !important;
+    }
+
+    .nav_list i {
+      font-size: 25px;
     }
   }
 
