bugs refinado de menu

--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -95,6 +95,7 @@
     0 0 13px #ffffff,
     0 0 15px #ffffff;
     background-color: #467cb6;
+    border-right: 2px solid red;
   }
 
   .nav_logo,
