--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -171,6 +171,26 @@
     }
   }
 
+  #menu {
+    background-color: #2C3E50;
+    color: white;
+    padding: 10px;
+    margin-left: 10px;
+    margin-top: 120%;
+  }
+  
+  #userAdminBtn {
+    background-color: transparent;
+    border: none;
+    color: white;
+  }
+  
+  #salirLink {
+     display: none; 
+     color: white; 
+     text-decoration:none; 
+  }
+
 
   @media screen and (min-width: 768px) {
     body {
