--- a/public/css/ambiente.css
+++ b/public/css/ambiente.css
@@ -67,6 +67,15 @@
     color: white;
 }
 
+.bg-custom-lista-fila-plomo {
+    background-color: rgba(189, 189, 189, 1);
+    color: white;
+}
+
+.bg-custom-lista-fila-blanco {
+    background-color: white;
+    color: white;
+}
 
 .text-white {
     color: white !important; /* Color del texto en blanco */
@@ -246,6 +255,25 @@
     color: #FFFFFF;
     text-align: center;
 }
+
+/*CSS DE LOS BOTONES DE RESERVA*/
+.custom-btn {
+    background-color: #214169;
+    border-color: #214169;
+}
+
+.custom-btn:hover,
+.custom-btn:focus,
+.custom-btn:active {
+    background-color: #214169;
+    border-color: #214169;
+}
+
+.divider {
+    margin: 0 1px; /* Espaciado entre los botones*/
+}
+
+/*HASTA AQUI*/
 
 @media (max-width: 768px) {
     .bootstrap-select .dropdown-menu {
