--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -150,6 +150,26 @@
       font-size: 0.8rem;
   }
 
+  #menu {
+    background-color: #2C3E50;
+    color: white;
+    padding: 10px;
+    margin-left: 10px;
+    margin-top: 120%;
+  }
+  
+  #userAdminBtn {
+    background-color: transparent;
+    border: none;
+    color: white;
+  }
+  
+  #salirLink {
+     display: none; 
+     color: white; 
+     text-decoration:none; 
+  }
+
   @media screen and (max-width: 767px) {
 /* Aquí colocas tus estilos específicos para pantallas pequeñas */
     .logo-fcyt {
