mostrar contrasenia funciona botons de menu mejorados

--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -102,6 +102,17 @@
     background-color: #467cb6;
   }
 
+  .active{
+    color: white;
+    box-shadow: 0 0 0 #ffffff, 
+    0 0 9px #467cb6, 
+    0 0 11px #ffffff, 
+    0 0 13px #ffffff,
+    0 0 15px #ffffff;
+    background-color: #467cb6;
+    transition: all .5s ease-in-out 1s;
+  }
+
   .nav_logo,
   .nav_link {
     display: grid;
@@ -192,8 +203,17 @@
       margin-left: 3.5rem !important;
     }
 
+    .nav_list a {
+      margin-right: 120px;
+      padding-left: 10px;
+    }
+
+    .nav_list span{
+      font-size: 0;
+    }
+
     .nav_list i {
-      font-size: 25px;
+      font-size: 18px;
     }
   }
 
