--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -96,9 +96,9 @@
     color: white;
     box-shadow: 0 0 0 #ffffff, 
     0 0 9px #467cb6, 
-    0 0 11px #ffffff, 
-    0 0 13px #ffffff,
-    0 0 15px #ffffff;
+    0 0 4px #ffffff, 
+    0 0 5px #ffffff,
+    0 0 1px #ffffff;
     background-color: #467cb6;
   }
 
@@ -106,9 +106,9 @@
     color: white;
     box-shadow: 0 0 0 #ffffff, 
     0 0 9px #467cb6, 
-    0 0 11px #ffffff, 
-    0 0 13px #ffffff,
-    0 0 15px #ffffff;
+    0 0 4px #ffffff, 
+    0 0 5px #ffffff,
+    0 0 1px #ffffff;
     background-color: #467cb6;
     transition: all .5s ease-in-out 1s;
   }
@@ -162,7 +162,6 @@
   }
 
   #menu {
-    background-color: #2C3E50;
     color: white;
     padding: 10px;
     margin-left: 10px;
@@ -179,6 +178,7 @@
 
 #userAdminBtn i {
     margin-right: 5px; /* Espacio entre el icono y el texto */
+    font-size: 25px;
 }
   
   #salirLink {
