--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -252,3 +252,40 @@
     }
     
   }
+
+/* Estilos para el encabezado */
+.header {
+  display: flex; 
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 20px;
+  background-color: #e3e7e9; 
+}
+
+/* Estilos para el contenedor del icono del menú */
+.header_toggle {
+  display: flex; 
+  align-items: center; 
+}
+
+/* Estilos para el contenedor del icono de notificaciones */
+.notificaciones {
+  display: flex; 
+  align-items: center; 
+}
+
+/* Estilos para el icono de notificaciones */
+.notificaciones i {
+  font-size: 24px; 
+  color: #2B4C6F;
+  border: 2px solid #2B4C6F; 
+  border-radius: 50%; 
+  padding: 10px; 
+  box-sizing: border-box; 
+  cursor: pointer; 
+  width: 35px; 
+  height: 35px; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+}
