--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -259,7 +259,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 20px;
-  background-color: #e3e7e9; 
+  background-color: #f4f8fa; 
 }
 
 /* Estilos para el contenedor del icono del menú */
