--- a/public/css/hojamenu.css
+++ b/public/css/hojamenu.css
@@ -256,7 +256,7 @@
 /* Estilos para el encabezado */
 .header {
   display: flex; 
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   padding: 20px 20px;
   background-color: #f4f8fa; 
